--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "mvt"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Douglas Lau <doug.lau@state.mn.us>"]
 description = "A library for encoding mapbox vector tiles"
 license = "MIT/Apache-2.0"
 documentation = "https://docs.rs/mvt"
-homepage = "https://githum.com/DougLau/mvt"
-repository = "https://githum.com/DougLau/mvt"
+homepage = "https://github.com/DougLau/mvt"
+repository = "https://github.com/DougLau/mvt"
 edition = "2018"
 
 [dependencies]
