--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
-protobuf = "2.17"
+protobuf = "~2.17"
 protobuf-codegen-pure = { version = "2.17", optional = true }
 
 [features]
